--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
 			"email": "support@pandaac.net"
 		}
 	],
-	"require": {},
+	"require": {
+		"php": ">=5.4.0",
+		"apolune/core": "self.version"
+	},
 	"autoload": {
 		"psr-4": {
 			"Apolune\\Account\\": "src/"
