--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "apolune/account",
-	"keywords": ["pandaac", "apolune", "apolune-package", "laravel"],
+	"keywords": ["pandaac", "apolune", "apolunecomponent", "laravel"],
 	"license": "MIT",
 	"authors": [
 		{
@@ -14,7 +14,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Apolune\\Account\\": "src/"
+			"Apolune\\Account\\": ""
 		}
 	},
 	"minimum-stability": "dev"
