--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
 		"apolune/core": "self.version"
 	},
 	"autoload": {
+		"files": [
+			"validation.php"
+		],
 		"psr-4": {
 			"Apolune\\Account\\": ""
 		}
