--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"apolune/core": "self.version"
+		"apolune/core": "self.version",
+		"cebe/markdown": "~1.1.0"
 	},
 	"autoload": {
 		"files": [
