--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "apolune/account",
-	"keywords": ["pandaac", "apolune", "apolunecomponent", "laravel"],
+	"keywords": ["pandaac", "apolune", "apolunecomponent", "tibia", "opentibia"],
 	"license": "MIT",
 	"authors": [
 		{
